# strom

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
strom/: __init__.py  fetch_prices.py  heat_dissipation.py  simple.py
