[tool.poetry]
name = "strom"
version = "0.1.0"
description = ""
authors = ["Ole Martin Ruud <dev@barskern.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
matplotlib = "^3.6.2"
requests-cache = "^0.9.7"
pendulum = "^2.1.2"
pandas = "^1.5.2"
seaborn = "^0.12.1"
tqdm = "^4.64.1"
scipy = "^1.9.3"
numpy = "^1.23.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
