[tool.poetry]
name = "strom"
version = "0.1.1"
description = ""
authors = ["Ole Martin Ruud <dev@barskern.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pendulum = "^3.0.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
requests-cache = "^1.2.1"
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.12.1"
tqdm = "^4.66.6"
scipy = "^1.14.1"
numpy = "^2.1.2"

[tool.poetry.scripts]
strom_fetch = "strom.fetch_prices:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
